--- a/edworks-client/src/app/usuario/usuario-form/usuario-form.component.html
+++ b/edworks-client/src/app/usuario/usuario-form/usuario-form.component.html
@@ -1,1 +1,51 @@
-<h1 class="mt-4">Cadastro de usuário</h1>
+<h1 class="mt-4">Usuário</h1>
+<ol class="breadcrumb mb-4">
+    <li class="breadcrumb-item active">Cadastro</li>
+</ol>
+<div class="container">
+    <form>
+        <div class="row">
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="id">ID:</label>
+                    <input type="text" name="id" class="form-control" disabled="true" [(ngModel)]="usuario.id">
+                </div>
+            </div>
+            <div class="col-md-10">
+                <div class="form-group">
+                    <label for="id">Nome *:</label>
+                    <input type="text" name="nome" class="form-control" [(ngModel)]="usuario.nome">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label for="email">E-mail *:</label>
+                    <input type="text" name="email" class="form-control" [(ngModel)]="usuario.email">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label for="senha">Senha *:</label>
+                    <input type="password" name="senha" class="form-control" [(ngModel)]="usuario.senha">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label for="perfil">Perfil *:</label>
+                    <input type="text" name="perfil" class="form-control" [(ngModel)]="usuario.perfil">
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-2">
+                <button type="submit" class="btn btn-success" (click)="salvar()">
+                    <i class="fa fa-save"></i>
+                    Salvar
+                </button>
+            </div>
+        </div>
+    </form>
+</div>
