--- a/edworks-client/src/app/usuario/usuario-form/usuario-form.component.html
+++ b/edworks-client/src/app/usuario/usuario-form/usuario-form.component.html
@@ -8,7 +8,7 @@
             <div class="col-md-2">
                 <div class="form-group">
                     <label for="id">ID:</label>
-                    <input type="text" name="id" class="form-control" disabled="true" [(ngModel)]="usuario.id">
+                    <input type="text" name="id" class="form-control" disabled="true" [ngModel]="usuario.id">
                 </div>
             </div>
             <div class="col-md-10">
